# flattrs

./: .travis.yml  Makefile  README.rst  build-wheels.sh  flattrs.fbs  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
flatc/: Includes.py  OptVectorOfEnums.py  OptionalVectorsOfScalars.py  SeqVectorsOfScalars.py  VectorOfCommon1.py  VectorOfEnums.py  VectorOfOptionalCommon1.py  VectorsOfInts.py
flatc/flattrs_test/: ASimpleByteEnum.py  AllEnums.py  AllScalars.py  Empty.py  (+27 more)
flattrs_test/: ASimpleByteEnum.py  ASimpleUByteEnum.py  AnInt32Enum.py  AnUInt32Enum.py  AnUInt8Enum.py  ByteArrayTable.py  Common1.py  CommonUnion.py  ContainsNamespaced.py  ContainsTable.py  HasCaps.py  JustADouble.py  JustAString.py  ListOfStrings.py  OptVectorOfEnums.py  OptionalByteArrayTable.py  OptionalSeqVectorOfStrings.py  OptionalTable.py  OptionalVectorOfStrings.py  OptionalVectorsOfScalars.py  SeqVectorOfCommon1.py  SeqVectorOfEnums.py  SeqVectorOfOptionalCommon1.py  SeqVectorOfStrings.py  SeqVectorsOfScalars.py  UnionOfNestedTables.py  UnionOfOptionalTables.py  VectorOfCommon1.py  VectorOfEnums.py  VectorOfOptionalCommon1.py  VectorOfStrings.py  VectorsOfBools.py  VectorsOfFloats.py  VectorsOfInts.py  VectorsOfScalars.py
tests/: __init__.py  _flatc.py  models.py  models_common.py  models_enums.py  models_nested.py  models_tableswithtables.py  models_trivial.py  models_unions.py  models_vectors.py  strats.py  test_buffer_writing.py  test_common.py  test_misc.py  test_modgen.py  test_tableswithtables.py  test_trivial.py  test_unions.py  test_vectors.py
(+152 files in other folders)
