[build-system]
requires = ["setuptools", "wheel", "cython==0.29.32"]

[tool.isort]
profile = "black"

[tool.coverage.run]
parallel = true
branch = true
source = ["flattrs"]

[tool.coverage.paths]
source = ["src", ".nox/tests*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true